# lycoris_downloader

./: Cargo.toml
.github/workflows/: main.yml
src/: args.rs  fetcher.rs  main.rs  parser.rs
