[package]
name = "lycoris_downloader"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
futures-util = "0.3.31"
indicatif = "0.17.9"
reqwest = { version = "0.12.12", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
